--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: update-manager\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-02-13 10:48+0100\n"
+"Report-Msgid-Bugs-To: michael.vogt@canonical.com\n"
+"POT-Creation-Date: 2006-02-18 11:18+0100\n"
 "PO-Revision-Date: 2005-03-29 13:36-0300\n"
 "Last-Translator: Raphael Higino <raphaelh@uai.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-status@listas.cipsga.org."
@@ -56,60 +56,67 @@ msgid "Internet Updates"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:10
-msgid "Restore _Defaults"
+msgid ""
+"Only security updates from the official Ubuntu servers will be installed "
+"automatically. The software package \"unattended-upgrades\" needs to be "
+"installed therefor"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:11
-msgid "Restore the default keys of your distribution"
+msgid "Restore _Defaults"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:12
-msgid "Software Preferences"
+msgid "Restore the default keys of your distribution"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:13
-msgid "_Check for updates automatically:"
+msgid "Software Preferences"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:14
-msgid "_Download updates in the backgound, but do not install them"
+msgid "_Check for updates automatically:"
 msgstr ""
 
 #: ../data/SoftwareProperties.glade.h:15
-msgid "_Install new updates without confirmation"
+msgid "_Download updates in the backgound, but do not install them"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:102
+#: ../data/SoftwareProperties.glade.h:16
+msgid "_Install security updates without confirmation"
+msgstr ""
+
+#: ../SoftwareProperties/SoftwareProperties.py:101
 #, python-format
 msgid "Every %s days"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:132
+#: ../SoftwareProperties/SoftwareProperties.py:131
 #, python-format
 msgid "After %s days"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:330
+#: ../SoftwareProperties/SoftwareProperties.py:354
 msgid "Import key"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:340
+#: ../SoftwareProperties/SoftwareProperties.py:364
 msgid "Error importing selected file"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:341
+#: ../SoftwareProperties/SoftwareProperties.py:365
 msgid "The selected file may not be a GPG key file or it might be corrupt."
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:353
+#: ../SoftwareProperties/SoftwareProperties.py:377
 msgid "Error removing the key"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:354
+#: ../SoftwareProperties/SoftwareProperties.py:378
 msgid "The key you selected could not be removed. Please report this as a bug."
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:397
+#: ../SoftwareProperties/SoftwareProperties.py:421
 #, python-format
 msgid ""
 "<big><b>Error scaning the CD</b></big>\n"
@@ -117,11 +124,11 @@ msgid ""
 "%s"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:447
+#: ../SoftwareProperties/SoftwareProperties.py:471
 msgid "Please enter a name for the disc"
 msgstr ""
 
-#: ../SoftwareProperties/SoftwareProperties.py:463
+#: ../SoftwareProperties/SoftwareProperties.py:487
 msgid "Please insert a disc in the drive:"
 msgstr ""
 
@@ -314,7 +321,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:105
 #, python-format
-msgid "Downloading file %li of %li with %s/s"
+msgid "Downloading file %li of %li at %s/s"
 msgstr ""
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:106
@@ -324,7 +331,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:108
 #, python-format
-msgid "Downloading file %li of %li with unknown speed"
+msgid "Downloading file %li of %li at unknown speed"
 msgstr ""
 
 #. FIXME: add support for the timeout
@@ -435,7 +442,7 @@ msgid "Downloading and installing the upgrades"
 msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:8
-msgid "Modifing the software channels"
+msgid "Modifying the software channels"
 msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:9
