--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (0.42.2ubuntu6) dapper; urgency=low
+
+  * SoftwareProperties/*: fix some UI problems (thanks to Sebastian Heinlein)
+  * debian/control: arch: all now
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Feb 2006 16:16:30 +0100
+
 update-manager (0.42.2ubuntu5) dapper; urgency=low
 
   * po/pt_BR.po: updated translation (thanks to 
