--- a/TODO
+++ b/TODO
@@ -6,4 +6,5 @@
 - handle cases like "deb http://bla/ dist sec1 sec2 # comment" 
 - rework the add channel/cdrom dialogs
 - d'n'd for key files
-- use one line per section and not one per channel in the treeview
+- use one row per section and not one per channel in the treeview
+- sort the sources by dist
