--- a/DistUpgrade/TODO
+++ b/DistUpgrade/TODO
@@ -1,3 +1,17 @@
+MUSTFIX:
+--------
+* debconf gnome dosn't work (can't connect to the session)
+* display a message that all applications should be closed for the 
+  dist-upgrade (and that strange things like a crashing panel can
+  happen)
+
+
+
+breezy->dapper
+--------------
+- gnome-icon-theme changes a lot, icons move from hicolor to gnome.
+  this might have caused a specatular crash during a upgrade
+
 
 hoary->breezy
 -------------
@@ -5,20 +19,11 @@ hoary->breezy
   (it will crash otherwise)
 - send a "\n" on the libc6 question on hoary->breezy
 
-breezy->dapper
---------------
-- gnome-icon-theme changes a lot, icons move from hicolor to gnome.
-  this might have caused a specatular crash during a upgrade
-
 general
 -------
 - CDROM upgrades !!!
-- display a message that all applications should be closed for the 
-  dist-upgrade (and that strange things like a crashing panel can
-  happen)
 
 - whitelist removal (pattern? e.g. c102 -> c2a etc)?
-- logging for the dpkg install run
 
 - check authentication and don't upgrade anything that is not
   authenticated (maybe just comment unauthenticated stuff out?)
