--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
-"POT-Creation-Date: 2006-03-10 17:56+0100\n"
+"POT-Creation-Date: 2006-03-11 18:47+0100\n"
 "PO-Revision-Date: 2005-04-03 01:26-0500\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@gnome.org>\n"
@@ -754,39 +754,51 @@ msgstr "Ubuntu 5.04 Updates"
 #. Description
 #: ../channels/Ubuntu.info.in:57
 #, fuzzy
-msgid "Ubuntu 5.10 'Breezy Badger'"
-msgstr "Ubuntu 5.04 Security Updates"
+msgid "Ubuntu 6.04 Backports"
+msgstr "Ubuntu 5.04 Updates"
 
 #. Description
 #: ../channels/Ubuntu.info.in:74
 #, fuzzy
-msgid "Ubuntu 5.10 Security Updates"
+msgid "Ubuntu 5.10 'Breezy Badger'"
 msgstr "Ubuntu 5.04 Security Updates"
 
 #. Description
 #: ../channels/Ubuntu.info.in:91
 #, fuzzy
+msgid "Ubuntu 5.10 Security Updates"
+msgstr "Ubuntu 5.04 Security Updates"
+
+#. Description
+#: ../channels/Ubuntu.info.in:108
+#, fuzzy
 msgid "Ubuntu 5.10 Updates"
 msgstr "Ubuntu 5.04 Updates"
 
+#. Description
+#: ../channels/Ubuntu.info.in:125
+#, fuzzy
+msgid "Ubuntu 5.10 Backports"
+msgstr "Ubuntu 5.04 Updates"
+
 #. CompDescription
-#: ../channels/Ubuntu.info.in:94 ../channels/Debian.info.in:51
+#: ../channels/Ubuntu.info.in:128 ../channels/Debian.info.in:51
 #, fuzzy
 msgid "Oficially supported"
 msgstr "Officially supported"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:97
+#: ../channels/Ubuntu.info.in:131
 msgid "Restricted copyright"
 msgstr "Restricted copyright"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:100
+#: ../channels/Ubuntu.info.in:134
 msgid "Community maintained (Universe)"
 msgstr "Community maintained (Universe)"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:103
+#: ../channels/Ubuntu.info.in:137
 msgid "Non-free (Multiverse)"
 msgstr "Non-free (Multiverse)"
 
