--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: update-manager 0.37.2\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
-"POT-Creation-Date: 2006-03-10 17:56+0100\n"
+"POT-Creation-Date: 2006-03-11 18:47+0100\n"
 "PO-Revision-Date: 2005-04-04 19:43+0200\n"
 "Last-Translator: \n"
 "Language-Team: French <gnomefr@traduc.org>\n"
@@ -761,39 +761,51 @@ msgstr "Mises à jour d'Ubuntu 5.04"
 #. Description
 #: ../channels/Ubuntu.info.in:57
 #, fuzzy
-msgid "Ubuntu 5.10 'Breezy Badger'"
-msgstr "Ubuntu 5.04 Mises à jour de sécurité"
+msgid "Ubuntu 6.04 Backports"
+msgstr "Mises à jour d'Ubuntu 5.04"
 
 #. Description
 #: ../channels/Ubuntu.info.in:74
 #, fuzzy
-msgid "Ubuntu 5.10 Security Updates"
+msgid "Ubuntu 5.10 'Breezy Badger'"
 msgstr "Ubuntu 5.04 Mises à jour de sécurité"
 
 #. Description
 #: ../channels/Ubuntu.info.in:91
 #, fuzzy
+msgid "Ubuntu 5.10 Security Updates"
+msgstr "Ubuntu 5.04 Mises à jour de sécurité"
+
+#. Description
+#: ../channels/Ubuntu.info.in:108
+#, fuzzy
 msgid "Ubuntu 5.10 Updates"
 msgstr "Mises à jour d'Ubuntu 5.04"
 
+#. Description
+#: ../channels/Ubuntu.info.in:125
+#, fuzzy
+msgid "Ubuntu 5.10 Backports"
+msgstr "Mises à jour d'Ubuntu 5.04"
+
 #. CompDescription
-#: ../channels/Ubuntu.info.in:94 ../channels/Debian.info.in:51
+#: ../channels/Ubuntu.info.in:128 ../channels/Debian.info.in:51
 #, fuzzy
 msgid "Oficially supported"
 msgstr "Supportés officiellement"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:97
+#: ../channels/Ubuntu.info.in:131
 msgid "Restricted copyright"
 msgstr "Copyright restreint"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:100
+#: ../channels/Ubuntu.info.in:134
 msgid "Community maintained (Universe)"
 msgstr "Maintenu par la communauté (Universe)"
 
 #. CompDescription
-#: ../channels/Ubuntu.info.in:103
+#: ../channels/Ubuntu.info.in:137
 msgid "Non-free (Multiverse)"
 msgstr "Non-libre (Multiverse)"
 
