--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ update-manager (0.42.2ubuntu8) dapper; urgency=low
   * Use the the number of available and not selected updates to determinate
     if the system is up-to-date (fixes #35300)
   * fix ui problem with software preferences (fixes #35987)
+  * fix width problem in SoftwareProperties
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Mar 2006 21:57:28 +0100
 
