--- a/po/de.po
+++ b/po/de.po
@@ -9,19 +9,47 @@ msgid ""
 msgstr ""
 "Project-Id-Version: update-manager\n"
 "Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
-"POT-Creation-Date: 2006-04-23 21:06+0200\n"
-"PO-Revision-Date: 2006-04-23 21:01+0200\n"
+"POT-Creation-Date: 2006-04-23 21:13+0200\n"
+"PO-Revision-Date: 2006-04-23 21:15+0200\n"
 "Last-Translator: Andreas Nagl <andreas.nagl@aon.at>\n"
 "Language-Team: German GNOME Translations <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1\n"
+"Plural-Forms: nplurals=2; plural=n != 1"
+
+#: ../SoftwareProperties/SoftwareProperties.py:103
+msgid "Daily"
+msgstr "Täglich"
+
+#: ../SoftwareProperties/SoftwareProperties.py:104
+msgid "Every two days"
+msgstr "Alle %s Tage"
+
+#: ../SoftwareProperties/SoftwareProperties.py:105
+msgid "Weekly"
+msgstr "Wöchentlich"
+
+#: ../SoftwareProperties/SoftwareProperties.py:106
+msgid "Every two weeks"
+msgstr "Alle zwei Wochen"
 
 #: ../SoftwareProperties/SoftwareProperties.py:111
 #, python-format
 msgid "Every %s days"
 msgstr "Alle %s Tage"
+
+#: ../SoftwareProperties/SoftwareProperties.py:134
+msgid "After one week"
+msgstr "Nach einer Woche"
+
+#: ../SoftwareProperties/SoftwareProperties.py:135
+msgid "After two weeks"
+msgstr "Nach zwei Wochen"
+
+#: ../SoftwareProperties/SoftwareProperties.py:136
+msgid "After one month"
+msgstr "Nach einem Monat"
 
 #: ../SoftwareProperties/SoftwareProperties.py:141
 #, python-format
