--- a/DistUpgrade/README
+++ b/DistUpgrade/README
@@ -1,3 +1,17 @@
+General
+-------
+
+The dist-upgrader is designed to make upgrades for ubuntu (or similar
+distributions) easy and painless. It supports both network mode and
+cdrom upgrades. The cdromupgrade will ask if it should use the network
+or not. There is a wrapper script "cdromugprade" (that assumes the
+file of the upgrade life in CDROM_ROOT/upgrade/) that can be put onto
+the CD and it will support upgrades directly from the CD.
+
+
+Configuration
+-------------
+
 The DistUpgrade.cfg format is based on the python ConfigParser.
 
 It supports the following sections:
