* DistUpgrade/DistUpgradeControler.py:   - add the Debug::pkgDepCache::AutoInstall debug option * DistUpgrade/DistUpgradeView.py:   - add missing import gettext * DistUpgrade/DistUpgradeViewGtk.py:   - be more robust against gettext failure * DistUpgrade/cdromupgrade:   - fix path

--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,3 +1,8 @@
+2006-09-04:
+	- set Debug::pkgDepCache::AutoInstall as debug option too
+	- be more robust against failure from the locales
+2006-09-03:
+	- fix in the cdromupgrade script path detection
 2006-09-01:
 	- make the cdromupgrade wrapper work with the compressed version
           of the upgrader as put onto the CD
