--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (0.44.8) edgy; urgency=low
+
+  * fix missing /var/log/dist-upgrade
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  8 Sep 2006 20:33:04 +0200
+
 update-manager (0.44.7) edgy; urgency=low
 
   * UpdateManager/UpdateManager.py:
