--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+UpdateManager.Common.aptsources.py:
+- make the distro detection in sources.list more clever by using the
+  origin informaton to avoid adding full uris to (unofficial/internal)
+  mirrors 
+
+Misc:
 - have a common error dialog readymade and rib out all those 
   GtkMessageDialogs
 - add download size to treeview
