* added new "MirrorsFile" keyword for the DistInfo Tagfile * look for mirros as well when matching distros

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (0.44.10) edgy; urgency=low
+
+  * aptsources.py:
+    - fix add_component() to avoid duplicated components
+    - added MirrorsFile key to DistInfo code to have a better idea
+      about the available mirrors
+  
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 10 Sep 2006 00:01:29 +0200
+
 update-manager (0.44.9) edgy; urgency=low
 
   * SoftwareProperties/SoftwareProperties.py:
