* DistUpgrade/DistUpgradeControler.py:   - disable backports fetching

--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,3 +1,7 @@
+2006-09-26:
+	- comment out the getRequiredBackport code because we will
+	  not use Breaks for the dapper->edgy upgrade yet 
+          (see #54234 for the rationale)
 2006-09-23:
 	- support fetching backports of selected packages first and
 	  use them for the upgrade (needed to support Breaks)
