* UpdateManager/Common/aptsources.py:   - use self.source_code_sources when enabling a component * DistUpgrade/DistUpgradeControler.py:   - make sure to enable restricted as well otherwise the kernel     won't upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ update-manager (0.44.14) edgy; urgency=low
   * DistUprade/DistUpgradeControler.py:
     - check for self.sources, self.aptcdrom before using it (lp: #61852)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 26 Sep 2006 23:17:27 +0200
 
 update-manager (0.44.13) edgy; urgency=low
 
