--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,4 +1,7 @@
 2006-09-27:
+	- uploaded a version that only reverts the backport fetching
+	  but no other changes compared to 2006-09-23
+2006-09-27:
 	- embarrassing bug cdromupgrade.sh
 2006-09-26:
 	- comment out the getRequiredBackport code because we will
