* added missing gksu dependency (this should become a recommends later)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 update-manager (0.44.15) edgy; urgency=low
 
   * added missing python-vte dependency (lp: #63609)
+  * added missing gksu dependency (lp: #63572)
 
  --
 
