* DistUpgrade/DistUpgrade.cfg:   - don't auto-remove xchat

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (0.44.15) edgy; urgency=low
 
   * added missing python-vte dependency (lp: #63609)
   * added missing gksu dependency (lp: #63572)
+  * don't remove xchat automatically anymore on upgrade (leftover
+    from breezy->dapper) (lp: #63881)
 
  --
 
