--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ update-manager (0.44.15) edgy; urgency=low
   * don't remove xchat automatically anymore on upgrade (leftover
     from breezy->dapper) (lp: #63881)
   * do not come up with bogus dist-upgrade suggestions
-  * fix bad english grammar (lp: #63761)
+  * fix bad english grammar (lp: #63761, #63474)
   * fix in the edgyUpdates quirks handler (lp: #63723)
   * catch error from _tryMarkObsoleteForRemoval() (lp: #63617)
   * fix plural forms for ro, pl (lp: #46421)
