* UpdateManager/Common/aptsources.py:   - fix crash for corner case sources.list layout (lp #64159) * UpdateManager/UpdateManager.py:   - get gconf proxy too

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 update-manager (0.44.16) edgy; urgency=low
 
-  * fix proxy use in user-mode
+  * fix proxy usage when runing in non-root mode (lp: #40626)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri,  6 Oct 2006 15:17:37 +0200
 
