--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,3 +1,6 @@
+2006-10-10:
+	- fix time calculation
+	- fix kubuntu upgrade case
 2006-10-06:
 	- fix source.list rewrite corner case bug (#64159)
 2006-10-04:
