--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -2,6 +2,7 @@
 	- backup cdroms.list only if actually available
 	- remove leftover references to ubuntu-base and
 	  use ubuntu-minimal and ubuntu-standard instead
+	- updated translations from rosetta
 2006-10-13:
 	- log held-back as well
 2006-10-12:
