--- a/po/csb.po
+++ b/po/csb.po
@@ -1,5 +1,5 @@
-# Breton translation for update-manager
-# Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
+# Kashubian translation for update-manager
+# Copyright (c) 2006 Rosetta Contributors and Canonical Ltd 2006
 # This file is distributed under the same license as the update-manager package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
 #
@@ -7,126 +7,123 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: update-manager\n"
-"Report-Msgid-Bugs-To: sebastian.heinlein@web.de\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2006-10-11 22:33+0000\n"
-"PO-Revision-Date: 2006-05-19 02:42+0000\n"
-"Last-Translator: Oublieuse <oublieuse@gmail.com>\n"
-"Language-Team: Breton <br@li.org>\n"
+"PO-Revision-Date: 2006-10-08 04:10+0000\n"
+"Last-Translator: Michôł Òstrowsczi <ostrowski.michal@gmail.com>\n"
+"Language-Team: Kashubian <csb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2\n"
 
 #: ../SoftwareProperties/SoftwareProperties.py:136
 msgid "Daily"
-msgstr ""
+msgstr "Codniowò"
 
 #: ../SoftwareProperties/SoftwareProperties.py:137
 msgid "Every two days"
-msgstr ""
+msgstr "Co dwa dni"
 
 #: ../SoftwareProperties/SoftwareProperties.py:138
 msgid "Weekly"
-msgstr ""
+msgstr "Co tidzeń"
 
 #: ../SoftwareProperties/SoftwareProperties.py:139
 msgid "Every two weeks"
-msgstr ""
+msgstr "Co dwa tidzenie"
 
 #: ../SoftwareProperties/SoftwareProperties.py:144
 #, python-format
 msgid "Every %s days"
-msgstr "Bep %s devezh"
+msgstr "Co %s dni"
 
 #: ../SoftwareProperties/SoftwareProperties.py:167
 msgid "After one week"
-msgstr ""
+msgstr "Pò tidzeniu"
 
 #: ../SoftwareProperties/SoftwareProperties.py:168
 msgid "After two weeks"
-msgstr ""
+msgstr "Pò dwóch tidzeniach"
 
 #: ../SoftwareProperties/SoftwareProperties.py:169
 msgid "After one month"
-msgstr ""
+msgstr "Pò miesącu"
 
 #: ../SoftwareProperties/SoftwareProperties.py:174
 #, python-format
 msgid "After %s days"
-msgstr "War-lerc'h %s devezh"
+msgstr "P %s dniach"
 
 #: ../SoftwareProperties/SoftwareProperties.py:252
 #, python-format
 msgid "%s updates"
-msgstr ""
+msgstr "%s aktualizacëji"
 
 #. TRANSLATORS: Label for the components in the Internet section
 #. first %s is the description of the component
 #: ../SoftwareProperties/SoftwareProperties.py:264
 #, python-format
 msgid "%s (%s)"
-msgstr ""
+msgstr "%s (%s)"
 
 #: ../SoftwareProperties/SoftwareProperties.py:316
 msgid "Main server"
-msgstr ""
+msgstr "Przédny serwera"
 
 #: ../SoftwareProperties/SoftwareProperties.py:320
 #: ../SoftwareProperties/SoftwareProperties.py:338
 #, python-format
 msgid "Server for %s"
-msgstr ""
+msgstr "Serwera dlô kraju %s"
 
 #: ../SoftwareProperties/SoftwareProperties.py:324
 msgid "Nearest server"
-msgstr ""
+msgstr "Nôblëższi serwera"
 
 #: ../SoftwareProperties/SoftwareProperties.py:345
 msgid "Custom servers"
-msgstr ""
+msgstr "Jine serwerë"
 
 #: ../SoftwareProperties/SoftwareProperties.py:604
 #: ../SoftwareProperties/SoftwareProperties.py:621
 msgid "Software Channel"
-msgstr ""
+msgstr "Kanal òprogramòwania"
 
 #: ../SoftwareProperties/SoftwareProperties.py:612
 #: ../SoftwareProperties/SoftwareProperties.py:629
 msgid "Active"
-msgstr ""
+msgstr "Aktiwny"
 
 #: ../SoftwareProperties/SoftwareProperties.py:714
 msgid "(Source Code)"
-msgstr ""
+msgstr "(zdrojowi kòd)"
 
 #: ../SoftwareProperties/SoftwareProperties.py:720
 msgid "Source Code"
-msgstr ""
+msgstr "Zdrojowi kòd"
 
 #: ../SoftwareProperties/SoftwareProperties.py:969
 msgid "Import key"
-msgstr "Emborzhiañ an alc'hwezh"
+msgstr "Impòrtëjë klucz"
 
 #: ../SoftwareProperties/SoftwareProperties.py:979
 msgid "Error importing selected file"
-msgstr "Fazi en ur emborzhiañ ar restr dibabet"
+msgstr "Fela òbczas impòrtowania wëbrónegò lopkù"
 
 #: ../SoftwareProperties/SoftwareProperties.py:980
 msgid "The selected file may not be a GPG key file or it might be corrupt."
-msgstr ""
-"Moarvat n'eo ket ur restr alc'hwezh GPG ar restr dibabet, pe neuze eo "
-"gwastet."
+msgstr "Wëbróny lopk może nie bëc kluczã abò mòże bëc pòpsëti."
 
 #: ../SoftwareProperties/SoftwareProperties.py:992
 msgid "Error removing the key"
-msgstr "Fazi en ur zilemel an alc'hwezh"
+msgstr "Fela òbczas rëmaniô klucza"
 
 #: ../SoftwareProperties/SoftwareProperties.py:993
 msgid ""
 "The key you selected could not be removed. Please report this as a bug."
-msgstr ""
-"N'eus ket tu da zilemel an alc'whezh ho peus dibabet. Kelaouit eo ur bug "
-"marplij."
+msgstr "Nie mòżna bëło rëmnąc klucza. Proszã zgłoszëc to jakno felã."
 
 #: ../SoftwareProperties/SoftwareProperties.py:1039
 #, python-format
@@ -135,18 +132,21 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"<big><b>Wëstśpiła fela òbczas skanowania platë CD</b></big>\n"
+"\n"
+"%s"
 
 #: ../SoftwareProperties/SoftwareProperties.py:1096
 msgid "Please enter a name for the disc"
-msgstr "Roit un anv evit ar bladenn marplij"
+msgstr "Proszã dac miono dlô platë"
 
 #: ../SoftwareProperties/SoftwareProperties.py:1112
 msgid "Please insert a disc in the drive:"
-msgstr "Lakait ur bladenn e-barzh ul lenner marplij:"
+msgstr ""
 
 #: ../DistUpgrade/DistUpgradeCache.py:91
 msgid "Broken packages"
-msgstr "Pakadoù torr"
+msgstr "Paczétë są zmiłkòwé"
 
 #: ../DistUpgrade/DistUpgradeCache.py:92
 msgid ""
@@ -156,7 +156,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeCache.py:213
 msgid "Can't upgrade required meta-packages"
-msgstr ""
+msgstr "Nie je mòżno zaktualizowac wëmôgónëch meta-paczétów"
 
 #: ../DistUpgrade/DistUpgradeCache.py:217
 msgid "A essential package would have to be removed"
@@ -176,7 +176,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeCache.py:246
 msgid "Error authenticating some packages"
-msgstr ""
+msgstr "Fela òbczas ùdowierzaniô niechtërnëch paczétów"
 
 #: ../DistUpgrade/DistUpgradeCache.py:247
 msgid ""
@@ -188,13 +188,15 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeCache.py:312
 #, python-format
 msgid "Can't install '%s'"
-msgstr ""
+msgstr "Nie je mòżno zainstalowac '%s'"
 
 #: ../DistUpgrade/DistUpgradeCache.py:313
 msgid ""
 "It was impossible to install a required package. Please report this as a "
 "bug. "
 msgstr ""
+"Nie bëło mòżna zainstalowac wëmôgónegò paczétu. Proszã zgłoszëc to jakno "
+"felã. "
 
 #: ../DistUpgrade/DistUpgradeCache.py:320
 msgid "Can't guess meta-package"
@@ -211,7 +213,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeControler.py:74
 msgid "Failed to add the CD"
-msgstr ""
+msgstr "Nie je mòżno dodac platë CD"
 
 #: ../DistUpgrade/DistUpgradeControler.py:75
 #, python-format
@@ -291,7 +293,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeControler.py:358
 msgid "Error during update"
-msgstr ""
+msgstr "Fela òbczas aktualizacëji"
 
 #: ../DistUpgrade/DistUpgradeControler.py:359
 msgid ""
@@ -313,11 +315,11 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeControler.py:440
 msgid "Do you want to start the upgrade?"
-msgstr ""
+msgstr "CZë chcesz zrëszëc aktualizacëjã?"
 
 #: ../DistUpgrade/DistUpgradeControler.py:460
 msgid "Could not install the upgrades"
-msgstr ""
+msgstr "Instalacëja aktualizacëji nie darzëła sã."
 
 #: ../DistUpgrade/DistUpgradeControler.py:461
 msgid ""
@@ -361,11 +363,11 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeControler.py:553
 msgid "_Remove"
-msgstr ""
+msgstr "_Rëmôj"
 
 #: ../DistUpgrade/DistUpgradeControler.py:563
 msgid "Error during commit"
-msgstr ""
+msgstr "Fela òbczas zacwierdzaniô"
 
 #: ../DistUpgrade/DistUpgradeControler.py:564
 msgid ""
@@ -386,7 +388,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeControler.py:667
 #: ../DistUpgrade/DistUpgradeControler.py:709
 msgid "Checking package manager"
-msgstr ""
+msgstr "Sprôwdzanié menadżera paczétów"
 
 #: ../DistUpgrade/DistUpgradeControler.py:671
 msgid "Preparing the upgrade failed"
@@ -451,7 +453,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeViewGtk.py:253
 #, python-format
 msgid "About %s remaining"
-msgstr ""
+msgstr "Òsta kòl %s"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:132
 #, python-format
@@ -462,12 +464,12 @@ msgstr ""
 #. of the terminal (to display something useful then)
 #: ../DistUpgrade/DistUpgradeViewGtk.py:163
 msgid "Applying changes"
-msgstr ""
+msgstr "Zacwierdzanié zmianów"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:187
 #, python-format
 msgid "Could not install '%s'"
-msgstr ""
+msgstr "Nie bëło mòżno zainstalowac '%s'"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:188
 msgid ""
@@ -481,6 +483,8 @@ msgid ""
 "Replace the customized configuration file\n"
 "'%s'?"
 msgstr ""
+"Zastãpic swójny lopk kònfigùracëji\n"
+"'%s'?"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:204
 msgid ""
@@ -490,7 +494,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:217
 msgid "The 'diff' command was not found"
-msgstr ""
+msgstr "Pòlét 'diff' nie òsta nalazłé"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:365
 msgid "A fatal error occured"
@@ -509,22 +513,25 @@ msgstr ""
 #, python-format
 msgid "%d package is going to be removed."
 msgid_plural "%d packages are going to be removed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d paczét òstanié rëmniãty."
+msgstr[1] "%d paczétë òstaną rëmniãte."
+msgstr[2] "%d paczétów òstaną rëmniãtëch."
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:506
 #, python-format
 msgid "%d new package is going to be installed."
 msgid_plural "%d new packages are going to be installed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d nowi paczétë òstaną zainstalowóne."
+msgstr[1] "%d nowi paczét òstanie zainstalowóny."
+msgstr[2] "%d nowëch paczétów òstanie zainstalowónëch."
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:512
 #, python-format
 msgid "%d package is going to be upgraded."
 msgid_plural "%d packages are going to be upgraded."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d paczét òstanié zaktualizowóny."
+msgstr[1] "%d paczétë òstaną zaktualizowóne."
+msgstr[2] "%d paczétów òstanie zaktualizowónëch."
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:517
 #, python-format
@@ -547,48 +554,49 @@ msgstr ""
 #: ../DistUpgrade/DistUpgradeViewGtk.py:532
 #: ../UpdateManager/UpdateManager.py:622
 msgid "Your system is up-to-date"
-msgstr ""
+msgstr "Twojô systema je fùl zaktualizowónô"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:533
 msgid ""
 "There are no upgrades available for your system. The upgrade will now be "
 "canceled."
 msgstr ""
+"Felëjë przistãpnëch aktualizacëjów. Aktualizacëjô òstanié òprzestónô."
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:549
 #, python-format
 msgid "<b>Remove %s</b>"
-msgstr ""
+msgstr "<b>Rëmôj %s</b>"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:551
 #, python-format
 msgid "Install %s"
-msgstr ""
+msgstr "Instalëjë %s"
 
 #: ../DistUpgrade/DistUpgradeViewGtk.py:553
 #, python-format
 msgid "Upgrade %s"
-msgstr ""
+msgstr "Aktualizëjë %s"
 
 #: ../DistUpgrade/DistUpgradeView.py:27
 #, python-format
 msgid "%li days %li hours %li minutes"
-msgstr ""
+msgstr "%li dni %li gòdzin %li minut"
 
 #: ../DistUpgrade/DistUpgradeView.py:29
 #, python-format
 msgid "%li hours %li minutes"
-msgstr ""
+msgstr "%li gòdzin %li minut"
 
 #: ../DistUpgrade/DistUpgradeView.py:31
 #, python-format
 msgid "%li minutes"
-msgstr ""
+msgstr "%li minut"
 
 #: ../DistUpgrade/DistUpgradeView.py:32
 #, python-format
 msgid "%li seconds"
-msgstr ""
+msgstr "%li sekùnd"
 
 #. 56 kbit
 #: ../DistUpgrade/DistUpgradeView.py:38
@@ -600,12 +608,13 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeView.py:109
 msgid "Reboot required"
-msgstr ""
+msgstr "Wëmògóne je zrëszenié kòmpùtra znowa"
 
 #: ../DistUpgrade/DistUpgradeView.py:110
 msgid ""
 "The upgrade is finished and a reboot is required. Do you want to do this now?"
 msgstr ""
+"Aktualizacëjô òsta zakùńczonô ë nót je zrëszëc kòmpùtr znowa. Zrobic to terô?"
 
 #. testcode to see if the bullets look nice in the dialog
 #. for i in range(4):
@@ -625,7 +634,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:5
 msgid "<b><big>Restart the system to complete the upgrade</big></b>"
-msgstr ""
+msgstr "<b><big>Zrëszë kòpmùtr znowa, żebë zakùńczëc aktualizacëjã</big></b>"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:6
 msgid "<b><big>Start the upgrade?</big></b>"
@@ -633,7 +642,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:7
 msgid "<b><big>Upgrading Ubuntu to version 6.10</big></b>"
-msgstr ""
+msgstr "<b></big>Aktualizacëjô Ubuntu do wersëji 6.10</big></b>"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:8
 msgid "Cleaning up"
@@ -645,7 +654,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:10
 msgid "Difference between the files"
-msgstr ""
+msgstr "Zjinaczi midze lopkama"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:11
 msgid "Fetching and installing the upgrades"
@@ -661,11 +670,11 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:14
 msgid "Restarting the system"
-msgstr ""
+msgstr "Zrëszanié znowa systemë"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:15
 msgid "Terminal"
-msgstr ""
+msgstr "Terminal"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:16
 msgid "_Cancel Upgrade"
@@ -673,7 +682,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:17
 msgid "_Continue"
-msgstr ""
+msgstr "Ò_przestanié aktualizacëji"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:18
 msgid "_Keep"
@@ -682,7 +691,7 @@ msgstr ""
 #: ../DistUpgrade/DistUpgrade.glade.h:19
 #: ../data/glade/SoftwarePropertiesDialogs.glade.h:21
 msgid "_Replace"
-msgstr ""
+msgstr "_Zastãpi"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:20
 msgid "_Report Bug"
@@ -690,7 +699,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:21
 msgid "_Restart Now"
-msgstr ""
+msgstr "_Zrëszë znowa"
 
 #: ../DistUpgrade/DistUpgrade.glade.h:22
 msgid "_Resume Upgrade"
@@ -698,7 +707,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgrade.glade.h:23
 msgid "_Start Upgrade"
-msgstr ""
+msgstr "_Startëjë aktualizacëjã"
 
 #: ../UpdateManager/DistUpgradeFetcher.py:68
 msgid "Could not find the release notes"
@@ -857,6 +866,7 @@ msgid "You can install %s update"
 msgid_plural "You can install %s updates"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: ../UpdateManager/UpdateManager.py:666
 msgid "Please wait, this can take some time."
@@ -1127,9 +1137,8 @@ msgid "_Download updates automatically, but do not install them"
 msgstr ""
 
 #: ../data/glade/SoftwareProperties.glade.h:25
-#, fuzzy
 msgid "_Import Key File"
-msgstr "Emborzhiañ an alc'hwezh"
+msgstr ""
 
 #: ../data/glade/SoftwareProperties.glade.h:26
 msgid "_Install security updates without confirmation"
@@ -1432,6 +1441,3 @@ msgstr ""
 #: ../data/channels/Debian.info.in:57
 msgid "Non-DFSG-compatible Software"
 msgstr ""
-
-#~ msgid "     "
-#~ msgstr "     "
