--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,3 +1,5 @@
+2006-10-21:
+	- fix incorrect arguments in fixup logging (lp: #67311)
 2006-10-17:
 	- ensure bzr, tomboy and xserver-xorg-input-* are properly 
           upgraded
