* po/*.po:   - updated the translations from rosetta + make update-po

--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -3,6 +3,7 @@
 	- more error logging
 	- fix upgrade problems for people with unofficial compiz 
 	  repositories (lp: #58424)
+	- rosetta i18n updates
 2006-10-17:
 	- ensure bzr, tomboy and xserver-xorg-input-* are properly 
           upgraded
