* DistUpgrade/DistUpgradeControler.py:   - comment out old cdrom sources (causes trouble with the     sysvinit<->upstart upgrade because sysinit is still essential)

--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,9 +1,12 @@
 2006-10-21:
+	- comment out old cdrom sources
+2006-10-21:
 	- fix incorrect arguments in fixup logging (lp: #67311)
 	- more error logging
 	- fix upgrade problems for people with unofficial compiz 
 	  repositories (lp: #58424)
 	- rosetta i18n updates
+	- uploaded
 2006-10-17:
 	- ensure bzr, tomboy and xserver-xorg-input-* are properly 
           upgraded
