--- a/DistUpgrade/Changelog
+++ b/DistUpgrade/Changelog
@@ -1,5 +1,6 @@
 2006-10-21:
 	- comment out old cdrom sources
+	- demotions updated
 2006-10-21:
 	- fix incorrect arguments in fixup logging (lp: #67311)
 	- more error logging
