* Avoid creating files owned by root in the user's home directory -   fix LP#95599

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.59.9) feisty; urgency=low
+
+  * Avoid creating files owned by root in the user's home directory -
+    fix #95599
+
+ -- Sebastian Heinlein <glatzor@ubuntu.com>  Sat, 24 Mar 2007 21:24:40 +0100
+
 update-manager (1:0.59.8) feisty; urgency=low
 
   * DistUpgrade/DistUpgradeViewKDE.py:
