--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 update-manager (1:0.59.9) feisty; urgency=low
 
+  * Hide help button - the outdated documentation is confusing - see LP#44944
   * Avoid creating files owned by root in the user's home directory -
     fix #95599
 
