string fix for bug 196229

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ update-manager (1:0.87.10) hardy; urgency=low
   * DistUpgrade/prerequists-sources.list:
     - remove cruft
 
+  [ Brian Murray ]
+  * string fix (LP: #196229)
+
  -- 
 
 update-manager (1:0.87.9) hardy; urgency=low
