--- a/po/update-manager.pot
+++ b/po/update-manager.pot
@@ -204,7 +204,7 @@ msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:277
 #, python-format
-msgid "A upgrade from '%s' to '%s' is not supported with this tool."
+msgid "An upgrade from '%s' to '%s' is not supported with this tool."
 msgstr ""
 
 #: ../DistUpgrade/DistUpgradeController.py:296
