string fixes for bugs 196269, 196229, 197015

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.87.13ubuntu1) hardy; urgency=low
+
+  [ Brian Murray ]
+  * String fix for "a unresolvable problem" (LP: #196269)
+  * String fix for "A upgrade to" (LP: #196229)
+  * String fix for "is in a inconsistent state" (LP: #197015)
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 18 Mar 2008 11:34:28 -0700
+
 update-manager (1:0.87.13) hardy; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
@@ -10,7 +19,7 @@ update-manager (1:0.87.13) hardy; urgency=low
   * DistUpgrade/removal_blacklist.cfg:
     - add "^postgresql-.*"to the removal blacklist
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Mar 2008 22:01:36 +0100
 
 update-manager (1:0.87.12) hardy; urgency=low
 
