--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.87.24) hardy; urgency=low
+
+  * DistUpgrade/ReleaseAnnouncement:
+    - modified https url to http so it is clickable (LP: #220386)
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 21 Apr 2008 14:58:17 -0700
+
 update-manager (1:0.87.23) hardy; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg.dapper:
