* DistUpgrade/DistUpgradeApport.py:   - fix typo in log dir (LP: #223743)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.87.26) hardy-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeApport.py:
+    - fix typo in log dir (LP: #223743)
+
+ -- 
+
 update-manager (1:0.87.25) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeView.py:
