* DistUpgrade/DistUpgrade.cfg.dapper:   - fix incorrect xubuntu-desktop detection

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ update-manager (1:0.87.26) hardy-proposed; urgency=low
     - if the "Crux" theme is used on dapper during the upgrade, 
       switch to "Human" because Crux is known to crash 
       (LP: #69124)
+  * DistUpgrade/DistUpgrade.cfg.dapper:
+    - fix incorrect xubuntu-desktop detection
 
  -- 
 
