* DistUpgrade/DistUpgradeCache.py:   - fix bug in withNetwork value propergation (LP: #227197)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.87.27) hardy-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix bug in withNetwork value propergation (LP: #227197)
+
+ --
+
 update-manager (1:0.87.26) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
