* po/ko.po:   - fix translation for y/n prompt so that korean users     can actually continue (LP: #223419)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.87.27) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix bug in withNetwork value propergation (LP: #227197)
+  * po/ko.po:
+    - fix translation for y/n prompt so that korean users
+      can actually continue (LP: #223419)
 
  --
 
