* DistUpgrade/DistUpgradeViewGtk.py:   - work around hang in svg loader (LP: #186465)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ update-manager (1:0.87.27) hardy-proposed; urgency=low
   * po/ko.po:
     - fix translation for y/n prompt so that korean users
       can actually continue (LP: #223419)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - work around hang in svg loader (LP: #186465)
 
  --
 
