* DistUpgrade/DistUpgradeController.py:   - fix typo and unfuzzy translations (LP: #220505)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.87.28) hardy-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - fix typo and unfuzzy translations (LP: #220505)
+
+ --
+
 update-manager (1:0.87.27) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
