* DistUpgrade/mirrors.cfg:   - remove ftp.caliu.info (LP: #231966)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 update-manager (1:0.87.28) hardy-proposed; urgency=low
 
+  * DistUpgrade/mirrors.cfg:
+    - remove ftp.caliu.info (LP: #231966)
   * DistUpgrade/DistUpgradeController.py:
     - fix typo and unfuzzy translations (LP: #220505)
 
