Bypass the automatic update notification check for update-manager-hildon

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ update-manager (1:0.91.5) intrepid; urgency=low
       (LP: #235527)
   * UpdateManager/ChangelogViewer.py:
     - support "exo-open" (xfce) too (LP: #240473)
+  * Removed check to set automatic notifications in update-manager-hildon
 
  --
 
