* DistUpgrade/DistUpgrade.cfg.dapper:   - remove ports.ubuntu.com from powerpc, it is not available on     ports.ubuntu.com but on archive.ubuntu.com (LP: #241729)

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ update-manager (1:0.87.28) hardy-proposed; urgency=low
       window (LP: #183209)
   * add extra paraonoia when adding a missing admin group
     (thanks to LaMont Jones) LP: #241723
+  * DistUpgrade/DistUpgrade.cfg.dapper:
+    - remove ports.ubuntu.com from powerpc, it is not available on
+      ports.ubuntu.com but on archive.ubuntu.com (LP: #241729)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Jun 2008 12:25:11 +0200
 
