* DistUpgrade/DistUpgradeQuirks.py:   - ensure "landscape-common" is not marked auto-install     (LP: #288051) * DistUpgrade/ReleaseAnnouncement:   - updated for final release

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,13 @@ update-manager (1:0.93.30) intrepid; urgency=low
   * DistUpgrade/DistUpgradeViewText.py:
     - ignore "default" argument handling in askYesNoQuestion
       to fix incorrect prompt for cdrom question
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - ensure "landscape-common" is not marked auto-install
+      (LP: #288051)
+  * DistUpgrade/ReleaseAnnouncement:
+    - updated for final release
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Oct 2008 16:31:29 +0200
 
 update-manager (1:0.93.29) intrepid; urgency=low
 
