* DistUpgrade/cdromupgrade:   - if cdromupgrade is run with a relative path we will fail to find the     installer components and error out.  Ensure that the path is absolute.     (LP: #335360)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.98.4) UNRELEASED; urgency=low
+
+  * DistUpgrade/cdromupgrade:
+    - if cdromupgrade is run with a relative path we will fail to find the
+      installer components and error out.  Ensure that the path is absolute.
+      (LP: #335360)
+
+ -- Andy Whitcroft <apw@canonical.com>  Fri, 27 Feb 2009 10:07:39 +0000
+
 update-manager (1:0.98.3) jaunty; urgency=low
 
   [ Brian Murray ]
