string fix for LP: #338943

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ update-manager (1:0.100) UNRELEASED; urgency=low
     - if cdromupgrade is run with a relative path we will fail to find the
       installer components and error out.  Ensure that the path is absolute.
       (LP: #335360)
+
+  [ Brian Murray ]
+  * UpdateManagerHildon/UpdateManagerHildon.py:
+     - wording fix "will be" to "are being" (LP: #338943)
   
   [ Michael Vogt ]
   * fix crash when help is not avaialble (LP: #338098)
