* DistUpgrade/DistUpgradeController.py:   - do not fail in partial upgrades if apport must be     enabled (LP: #357755)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.120) karmic; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - do not fail in partial upgrades if apport must be
+      enabled (LP: #357755)
+
+ --
+
 update-manager (1:0.111.5) jaunty; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
@@ -5,7 +13,7 @@ update-manager (1:0.111.5) jaunty; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - more debug output
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 15 Apr 2009 14:59:35 +0200
 
 update-manager (1:0.111.4) jaunty; urgency=low
 
