* UpdateManager/UpdateManager.py:   - use a gtk link button to point the user to further     upgrade information

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ update-manager (1:0.120) karmic; urgency=low
       comment out the driver and let xorg figure it out
       with its own magic (LP: #351394)
     - update tests/ for the change
+  * UpdateManager/UpdateManager.py:
+    - use a gtk link button to point the user to further
+      upgrade information
 
  --
 
