refactor the quirks handlers and not run them in partial upgrade mode

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ update-manager (1:0.120) karmic; urgency=low
       upgrade information
   * DistUpgrade/DistUpgradeController.py:
     - ensure ./imported/invoke-rc.d is executable (LP: #147742)
+  * refactor the quirks handlers and not run them in partial
+    upgrade mode
 
  --
 
